<resources>
    <string name="app_name">News</string>
    <string name="contact_us">If you need to contact us or want to contribute to</string>
    <string name="url">www.localrepoter.com</string>
    <string name="mail">You can mail us at:</string>
    <string name="noida_officel"> Localreporter.com
        <br>
            Codemaven Pvt.Ltd
        </br>
        <br>
            B-19,Gautam Budh Nagar,Sector 2
        </br>
        <br>
            Noida,India
        </br>
        <br>
           Phone:+912154548458
        </br>
        <br>
           Send e-mail to:localrepoters@codemaven.in
        </br>

    </string>

    <string name="rajasthan_office2"> Localreporter.com
        <br>
            Codemaven Pvt.Ltd
        </br>
        <br>
            B-19,Gautam Budh Nagar,Sector 2
        </br>
        <br>
            Noida,India
        </br>
        <br>
           Phone:+912154548458
        </br>
        <br>
           Send e-mail to:localrepoters@codemaven.in
        </br>

    </string>
    <string name="title_activity_home_main">HomeMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="news_time">10:20:05</string>

</resources>
